--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -33,6 +34,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.2.4",
